[gd_scene load_steps=41 format=3 uid="uid://d2r6ecatdtqut"]

[ext_resource type="PackedScene" uid="uid://6mo722gvco50" path="res://Actors/Enemys/Templates/EnemyBaseTemplate.tscn" id="1_400u0"]
[ext_resource type="Script" path="res://Actors/Enemys/Small Enemys/DemonEye.gd" id="2_xjylt"]
[ext_resource type="PackedScene" uid="uid://b7mdapvgvv4d4" path="res://Projectiles/fire_ball.tscn" id="5_4325e"]
[ext_resource type="Script" path="res://Resources/Enemy/Ai/AiTypeKeys_Resrouce.gd" id="6_ra7ad"]
[ext_resource type="Texture2D" uid="uid://chj2k1h3hk3xq" path="res://Sprites/actors/Enemys/small/Demon Eye/DemonEye.png" id="7_1k81c"]
[ext_resource type="Script" path="res://Resources/Attack/AttackResource.gd" id="7_jiem3"]
[ext_resource type="Texture2D" uid="uid://drw5se8c5e33u" path="res://Sprites/actors/Enemys/small/Demon Eye/DemonEye2.png" id="8_hpmga"]
[ext_resource type="Script" path="res://Resources/Enemy/EnemyStats.gd" id="8_yj8bj"]
[ext_resource type="Shader" path="res://Actors/player/player.gdshader" id="9_u1xt7"]
[ext_resource type="Texture2D" uid="uid://b81tkcbnqcdis" path="res://Sprites/actors/Enemys/small/bat/bat_particle.png" id="9_w3rug"]
[ext_resource type="Texture2D" uid="uid://gsta6urcksvx" path="res://Sprites/actors/Enemys/small/bat/bat_particle3.png" id="10_ilnne"]
[ext_resource type="PackedScene" uid="uid://q2xttk0jhejq" path="res://Manager/AttackBox.tscn" id="10_jwp4k"]
[ext_resource type="AudioStream" uid="uid://ctshalo85y3xo" path="res://Sounds/LaserEnemy.wav" id="10_qctm1"]
[ext_resource type="Script" path="res://UX/audio_2d.gd" id="11_kusyn"]

[sub_resource type="Resource" id="Resource_f31fk"]
script = ExtResource("6_ra7ad")
key = 0
state = 0

[sub_resource type="Resource" id="Resource_2vq8i"]
script = ExtResource("6_ra7ad")
key = 1
state = 1

[sub_resource type="Resource" id="Resource_iyomo"]
script = ExtResource("6_ra7ad")
key = 2
state = 2

[sub_resource type="Resource" id="Resource_q4r2s"]
script = ExtResource("6_ra7ad")
key = 3
state = 5

[sub_resource type="Resource" id="Resource_bog6j"]
script = ExtResource("7_jiem3")
damage = 1
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_8c7xq"]
script = ExtResource("7_jiem3")
damage = 5
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_fb4iu"]
resource_local_to_scene = true
script = ExtResource("8_yj8bj")
max_health = 1
max_Random_health_edit = 0
attack = SubResource("Resource_bog6j")
ai_type_keys = Array[ExtResource("6_ra7ad")]([SubResource("Resource_f31fk"), SubResource("Resource_2vq8i"), SubResource("Resource_iyomo"), SubResource("Resource_q4r2s")])
speed = 50.0
projectile = ExtResource("5_4325e")
ranged_attack = SubResource("Resource_8c7xq")
default_crit_chance = 20.0

[sub_resource type="Resource" id="Resource_60sad"]
script = ExtResource("7_jiem3")
damage = 2
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_ladb5"]
script = ExtResource("7_jiem3")
damage = 5
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_hsww1"]
resource_local_to_scene = true
script = ExtResource("8_yj8bj")
max_health = 2
max_Random_health_edit = 0
attack = SubResource("Resource_60sad")
ai_type_keys = Array[ExtResource("6_ra7ad")]([SubResource("Resource_f31fk"), SubResource("Resource_2vq8i"), SubResource("Resource_iyomo"), SubResource("Resource_q4r2s")])
speed = 100.0
projectile = ExtResource("5_4325e")
ranged_attack = SubResource("Resource_ladb5")
default_crit_chance = 20.0

[sub_resource type="Resource" id="Resource_tbejf"]
script = ExtResource("7_jiem3")
damage = 3
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_dyi57"]
script = ExtResource("7_jiem3")
damage = 10
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_esdlx"]
resource_local_to_scene = true
script = ExtResource("8_yj8bj")
max_health = 3
max_Random_health_edit = 0
attack = SubResource("Resource_tbejf")
ai_type_keys = Array[ExtResource("6_ra7ad")]([SubResource("Resource_f31fk"), SubResource("Resource_2vq8i"), SubResource("Resource_iyomo"), SubResource("Resource_q4r2s")])
speed = 100.0
projectile = ExtResource("5_4325e")
ranged_attack = SubResource("Resource_dyi57")
default_crit_chance = 20.0

[sub_resource type="Resource" id="Resource_vfe4b"]
script = ExtResource("7_jiem3")
damage = 4
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_xumya"]
script = ExtResource("7_jiem3")
damage = 15
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_70xna"]
resource_local_to_scene = true
script = ExtResource("8_yj8bj")
max_health = 4
max_Random_health_edit = 0
attack = SubResource("Resource_vfe4b")
ai_type_keys = Array[ExtResource("6_ra7ad")]([SubResource("Resource_f31fk"), SubResource("Resource_2vq8i"), SubResource("Resource_iyomo"), SubResource("Resource_q4r2s")])
speed = 100.0
projectile = ExtResource("5_4325e")
ranged_attack = SubResource("Resource_xumya")
default_crit_chance = 20.0

[sub_resource type="Resource" id="Resource_4guqs"]
script = ExtResource("7_jiem3")
damage = 5
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_23apr"]
script = ExtResource("7_jiem3")
damage = 20
knockback = 1.0
crit_chance = 0.0

[sub_resource type="Resource" id="Resource_wk034"]
resource_local_to_scene = true
script = ExtResource("8_yj8bj")
max_health = 5
max_Random_health_edit = 0
attack = SubResource("Resource_4guqs")
ai_type_keys = Array[ExtResource("6_ra7ad")]([SubResource("Resource_f31fk"), SubResource("Resource_2vq8i"), SubResource("Resource_iyomo"), SubResource("Resource_q4r2s")])
speed = 100.0
projectile = ExtResource("5_4325e")
ranged_attack = SubResource("Resource_23apr")
default_crit_chance = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3cst2"]
radius = 5.0
height = 25.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_un5xr"]
resource_local_to_scene = true
shader = ExtResource("9_u1xt7")
shader_parameter/opacity = 1.0
shader_parameter/r = 1.0
shader_parameter/g = null
shader_parameter/b = null
shader_parameter/mix_color = null

[sub_resource type="Animation" id="Animation_ryi04"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_chyg6"]
resource_name = "flying"
length = 0.500005
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 4, 3, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_61fje"]
_data = {
"RESET": SubResource("Animation_ryi04"),
"flying": SubResource("Animation_chyg6")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d84vw"]
radius = 6.0
height = 25.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q2vyc"]
radius = 6.0
height = 25.0

[node name="DemonEye" node_paths=PackedStringArray("Shoot_sound") instance=ExtResource("1_400u0")]
z_index = 2
script = ExtResource("2_xjylt")
stats = Array[Object]([SubResource("Resource_fb4iu"), SubResource("Resource_hsww1"), SubResource("Resource_esdlx"), SubResource("Resource_70xna"), SubResource("Resource_wk034")])
sprite_variation = Array[Texture2D]([ExtResource("7_1k81c"), ExtResource("8_hpmga")])
die_particle_variation = Array[Texture2D]([ExtResource("9_w3rug"), ExtResource("10_ilnne")])
Shoot_sound = NodePath("Sounds/ShootSound")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(1, 7)
shape = SubResource("CapsuleShape2D_3cst2")

[node name="sprite" parent="." index="1"]
material = SubResource("ShaderMaterial_un5xr")
position = Vector2(0, 7)
texture = ExtResource("7_1k81c")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_61fje")
}
autoplay = "flying"

[node name="AttackBox" parent="." index="3" node_paths=PackedStringArray("owner_entity") instance=ExtResource("10_jwp4k")]
owner_entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox" index="0"]
visible = false
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_d84vw")

[node name="Timer" type="Node" parent="." index="4"]

[node name="wander_time" type="Timer" parent="Timer" index="0"]
one_shot = true

[node name="follow_time" type="Timer" parent="Timer" index="1"]
wait_time = 2.0
one_shot = true

[node name="shoot_delay" type="Timer" parent="Timer" index="2"]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" parent="." index="5"]
visible = false
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_q2vyc")

[node name="VisibleOnScreenNotifier2D" parent="." index="7"]
rect = Rect2(-10, -10, 20, 40)

[node name="Death" parent="Sounds" index="0"]
pitch_scale = 1.5
min_random_pitch = 1.5
max_random_pitch = 2.0

[node name="ShootSound" type="AudioStreamPlayer2D" parent="Sounds" index="1"]
stream = ExtResource("10_qctm1")
script = ExtResource("11_kusyn")
max_random_pitch = 1.5

[connection signal="timeout" from="Timer/wander_time" to="." method="_on_wander_time_timeout"]
